Try to get text in text fields

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,6 +1,7 @@
 <html>
 <title>Coffee Advisor></title>
 <body>
+<div>
   <h1 align="center">Coffee Advisor </h1>
   <form method="POST" action="SelectCoffee.do">
     Select coffee 
@@ -16,5 +17,21 @@
       <input type="Submit">
     </center>
    </form>
+   </div>
+  
+  <div>
+  <h1 align="center">Register </h1>
+   
+   <form method="POST" action="Register.do">
+
+    First name: <input type="text" name="firstname"><br> 
+    Last name: <input type="text" name="lastname"><br><br>
+    <br><br>
+    <center>
+      <input type="Submit">
+    </center>
+   </form>
+   </div>
+   
 </body>
 <html>
