--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -33,5 +33,11 @@
    </form>
    </div>
    
+   <div>
+   <form method=”GET” action=”googleplus”> 
+   <button type=”submit”>Login</button> 
+</form>
+   
+   </div>
 </body>
 <html>
