--- a/WebContent/jstest.html
+++ b/WebContent/jstest.html
@@ -41,5 +41,13 @@ display: none;
 <img id="drag1" src="test.jpg" draggable="true"
 ondragstart="drag(event)" width="336" height="69">
 
+<table width="500" border="0" cellpadding="5">
+<tr>
+<td align="center" valign="center">
+<img src="image1.jpeg" width="100%" height="100%" style="display: block"></td>
+<td align="center" valign="center">
+<img src="image2.jpg" width="100%" height="100%" style="display: block"></td>
+</tr>
+</table>
 </body>
 </html>
