drag and drop add to main without submission...dun know how to parse to javascript

--- a/WebContent/draganddrop.html
+++ b/WebContent/draganddrop.html
@@ -11,7 +11,7 @@
   <style>
   #sortable1, #sortable2 {
     border: 1px solid #eee;
-    width: 142px;
+    width: 300px;
     min-height: 20px;
     list-style-type: none;
     margin: 0;
@@ -44,13 +44,9 @@
 </head>
 <body>
  
-<ul id="sortable1" class="connectedSortable">
-  <li class="ui-state-default">Item 1</li>
-  <li class="ui-state-default">Item 2</li>
-  <li class="ui-state-default">Item 3</li>
-  <li class="ui-state-default">Item 4</li>
-  <li class="ui-state-default">Item 5</li>
-</ul>
+<form id="sortable1" class="connectedSortable" method="get">
+  Username: <input type="text" name="usr_name">
+</form>
  
  <ul id="sortable2" class="connectedSortable">
 </ul>
