--- a/WebContent/mainPage.html
+++ b/WebContent/mainPage.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="//code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
   <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
-  <script type="text/javascript" src="Selection.js" ></script>
 <style>
 #header {
 	height: 70px;
@@ -17,35 +16,54 @@
 	color: white;
 }
 #coordEditor {
-	height: 100px;
-	width: 340px;
+	height: 290px;
+	width: 240px;
 	float: left;
 }
 #editor {
 	height: 290px;
-	width: 340px;
+	width: 440px;
 	float: left;
 }
 #player {
 	height: 400px;
-	width: 500px;
-	float: right;
+	width: 650px;
+	float: left;
 }
 #storage{
 	height: 400px;
-	width: 150px;
-	float: right;
+	width: 350px;
+	float: left;
 }
 #source {
-	height: 200px;
-	width: 1000px;
-	float: left;
+	height: 320px;
+	width: 300px;
 	padding: 5px;
+	float: left;
 }
 #divName {
 	border-radius: 10px;
 	border: none;
 	float: top;
+}
+#sortable li,#draggable li {
+    border-radius: 10px;
+    margin: 3px 3px 3px 3px;
+    padding: 3px 3px;
+    font-size: 0.8em;
+    color:white;
+    width: 150px;
+    background-color:#6699CC;
+}
+#sortable {
+   width:70%;
+   height:210px;
+   overflow:auto;
+   list-style-type: none;
+   padding-left:10px;
+}   
+#draggable {
+	list-style-type: none;
 }
 </style>
 <style> 
@@ -66,24 +84,6 @@ button {
 	border: none;
 	background-color: lightGrey;
 }
-#sortable li,#draggable li {
-    border-radius: 10px;
-    margin: 3px 3px 3px 3px;
-    padding: 3px 3px;
-    font-size: 0.8em;
-    color:white;
-    width: 150px;
-    background-color:#4679bd;
-  }
-   #sortable {
-   width:70%;
-   height:210px;
-   overflow:auto;
-   list-style-type: none;
-   padding-left:10px;
-   }
-   
- #draggable{list-style-type: none;}
 </style>
 <script type="text/javascript">
 $(function() {
@@ -103,22 +103,59 @@ $(function() {
         }
     });
 });
+
+function changeFloatLeft() {
+	var curFloat = document.getElementById("curFloat").src;
+	var indexOfDot = curFloat.indexOf(".");
+	var indexOfFloat = parseInt(curFloat.substring(indexOfDot - 1, indexOfDot));
+	indexOfFloat--;
+	if(indexOfFloat == 0) {
+		indexOfFloat = 3;//= total number of float
+	}
+	indexOfFloat = indexOfFloat % 4;//= total number of float + 1
+	var nextFloat = "float" + indexOfFloat.toString() + ".jpeg";
+	document.getElementById("curFloat").src = nextFloat;	
+}
+function changeFloatRight() {
+	var curFloat = document.getElementById("curFloat").src;
+	var indexOfDot = curFloat.indexOf(".");
+	var indexOfFloat = parseInt(curFloat.substring(indexOfDot - 1, indexOfDot));
+	indexOfFloat++;
+	indexOfFloat = indexOfFloat % 4;
+	if(indexOfFloat == 0) {
+		indexOfFloat++;
+	}
+	var nextFloat = "float" + indexOfFloat.toString() + ".jpeg";
+	document.getElementById("curFloat").src = nextFloat;
+}
+function changeCharacterLeft() {
+	var curCharacter = document.getElementById("curCharacter").src;
+	var indexOfDot = curCharacter.indexOf(".");
+	var indexOfCharacter = parseInt(curCharacter.substring(indexOfDot - 1, indexOfDot));
+	indexOfCharacter--;
+	if(indexOfCharacter == 0) {
+		indexOfCharacter = 2;
+	}
+	indexOfCharacter = indexOfCharacter % 3;
+	var nextCharacter = "char" + indexOfCharacter.toString() + ".jpeg";
+	document.getElementById("curCharacter").src = nextCharacter;
+}
+function changeCharacterRight() {
+	var curCharacter = document.getElementById("curCharacter").src;
+	var indexOfDot = curCharacter.indexOf(".");
+	var indexOfCharacter = parseInt(curCharacter.substring(indexOfDot - 1, indexOfDot));
+	indexOfCharacter++;
+	indexOfCharacter = indexOfCharacter % 3;
+	if(indexOfCharacter == 0) {
+		indexOfCharacter++;
+	}
+	var nextCharacter = "char" + indexOfCharacter.toString() + ".jpeg";
+	document.getElementById("curCharacter").src = nextCharacter;
+}
 </script>
 </head>
 <body>
 <div id="header"><h2>CS3213 Assignment3</h2></div>
-
- <div id="coordEditor">
- 	<div id="divName">Setting</div>
- 	<form>
-  <ul id="draggable">
-    <li id='right'>  Moveright<input type="text" name="right" size="2">steps</li>
-    <li id='left'>  Moveleft<input type="text" name="left" size="2">steps</li>
-    <li id='x'> setx:<input type="text" name="x_pos" size="2"></li>
-    <li id='y'> sety:<input type="text" name="y_pos" size="2"></li>    
-</ul>
-</form>
- </div>
  
  <div id="storage">
  	<div id="divName"><p>Old Project</p></div>
@@ -131,31 +168,43 @@ $(function() {
  	<input type="submit" value="Save">
  </div>
  
- <div id="editor">
+<div id="editor">
  	<div id="divName">Editor</div>
  	<div id="sortable"></div>
  	<input type="submit" value="Play!" onclick="submit()">
- </div>
+</div>
+ 
+<div id="coordEditor">
+ 	<div id="divName">Setting</div>
+ 	<form>
+    	<ul id="draggable">
+    	<li id='right'>  Moveright<input type="text" name="right" size="2">steps</li>
+    	<li id='left'>  Moveleft<input type="text" name="left" size="2">steps</li>
+    	<li id='x'> setx:<input type="text" name="x_pos" size="2"></li>
+    	<li id='y'> sety:<input type="text" name="y_pos" size="2"></li>    
+		</ul>
+	</form>
+</div>
  
  <div id="source">
  	<table>
  		<tr><th>Float</th></tr>
  		<tr>
- 			<td><button onclick="myFunction()"><img src="arrow_left.gif" height="15px"></button><img draggable="true" src="image3.jpeg" height="50px"><button onclick="myfunction()"><img src="arrow_right.gif" height="15px"></button>
+ 			<td><button onclick="changeFloatLeft()"><img src="arrow_left.gif" height="15px"></button>
+ 			<img id="curFloat" draggable="true" src="float1.jpeg" height="70px">
+ 			<button onclick="changeFloatRight()"><img src="arrow_right.gif" height="15px"></button>
  		</tr>
  	</table>
+ 	
  	<table>
  		<tr><th>Character</th></tr>
  		<tr>
- 			<td><button onclick="myFunction()"><img src="arrow_left.gif" height="15px"></button>
- 			<img draggable="true" src="image1.jpeg" height="50px">
- 			<button onclick="myfunction()"><img src="arrow_right.gif" height="15px"></button>
- 			
- 			<td><button onclick="myFunction()"><img src="arrow_left.gif" height="15px"></button>
- 			<img draggable="true" src="image2.jpg" height="50px">
- 			<button onclick="myfunction()"><img src="arrow_right.gif" height="15px"></button>
+ 			<td><button onclick="changeCharacterLeft()"><img src="arrow_left.gif" height="15px"></button>
+ 			<img id="curCharacter" draggable="true" src="char1.jpeg" height="70px">
+ 			<button onclick="changeCharacterRight()"><img src="arrow_right.gif" height="15px"></button>
  		</tr>
- 	</table>	
+ 	</table>
+ 	<p id="demo"></p>	
  </div>
 </body>
 </html>
