--- a/WebContent/mainPage.html
+++ b/WebContent/mainPage.html
@@ -3,15 +3,22 @@
 <head>
 <meta charset="UTF-8">
 <title>CS3213Assignment3</title>
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
-  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-  <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
+<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
+  <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
 <style>
+body {
+	background-image: url("background14.jpg");
+	background-size: 100% 100%;
+}
 #header {
 	height: 70px;
 	width: 1000px;
 	padding: 5px;
-	Background-color: #6699CC;
+	background-color: rgba(102, 153, 204, 0.8);
 	text-align: center;
 	color: white;
 }
@@ -35,6 +42,21 @@
 	width: 350px;
 	float: left;
 }
+#right {
+	background-color: rgb(135,10,8);
+}
+#left {
+	background-color: rgb(222,148,41);
+}
+#x {
+	background-color: rgb(96,127,15);
+}
+#y {
+	background-color: rgb(104,153,199);
+}
+#repeat {
+	background-color: rgb(62,69,127);
+}
 #source {
 	height: 320px;
 	width: 300px;
@@ -54,7 +76,6 @@
     font-size: 0.8em;
     color:white;
     width: 145px;
-    background-color:#4679bd;
     text-align:center;
  }
  
@@ -64,7 +85,7 @@
     padding: 3px 3px;
     font-size: 0.8em;
     color:white;
-    width: 180px;
+    width: 170px;
     background-color:#4679bd;
     text-align:center;
  }
@@ -79,7 +100,7 @@
  	cursor: pointer;
 }
 #sortable {
-   width:180px;
+   width:300px;
    height:110px;
    overflow:auto;
    list-style-type: none;
@@ -94,7 +115,7 @@
 div {
 	border: none;
     border-radius: 25px;
-    background-color: lightGrey;
+    background-color: rgba(190, 190, 190, 0.5);
     margin: 5px;
 } 
 p {
@@ -106,24 +127,12 @@ th {
 }
 button {
 	border: none;
-	background-color: lightGrey;
+	background-color: rgba(190, 190, 190, 0.5);
 }
 </style>
 <script type="text/javascript">
 var countElement = 0;
-$(function() {
-    $( "#draggable li" ).draggable({
-         connectToSortable: "#sortable1",
-         helper: "clone",
-         revert: "invalid"
-    });
 
-    $( "#sortable" ).sortable({
-        revert: true,
-        receive: function(event, ui) {
-        }
-    });
-});
 function dragIt(theEvent) {
 	//tell the browser what to drag
 	theEvent.dataTransfer.setData("Text", theEvent.target.id);
@@ -202,24 +211,67 @@ function dropOver() {
 	element.id = "sortable" + countElement.toString();
 	element.style.cssText = "height: 110px; width: 170px; float: right; border: dotted";
 	document.getElementById('divtest').appendChild(element);
+	
+	var editButton = document.createElement("input");
+	editButton.type = "button";
+	editButton.value = "Edit";
+	editButton.id = "edit" + countElement.toString();
+	editButton.setAttribute("onclick", "changeConnect(this)");
+	document.getElementById(element.id).appendChild(editButton);
 
-	   $(element).sortable({
-	        revert: true,
-	    	stop: function(event, ui){
-	            var text = ui.item.html();
-	            if (text.indexOf("<span class=\"closeButton\">X</span>")==-1) ui.item.html(text+'<span class="closeButton">X</span>');
-	         }
-	    });
+	
+	var sortNode = "#"+element.id;
+    $( "#draggable li" ).draggable({
+         connectToSortable: sortNode,
+         helper: "clone",
+         revert: "invalid"
+    });
+
+    $( sortNode ).sortable({
+        revert: true,
+        
+        stop: function(event, ui){
+	        var text = ui.item.html();
+	        console.log(ui.item);
+	        ui.item.css("border-radius", "10px");
+	        ui.item.css("margin", "3px 3px 3px 3px");
+	        ui.item.css("padding", "3px 3px");
+	        ui.item.css("font-size", "0.8em");
+	        ui.item.css("color", "white");
+	        ui.item.css("width", "150px");
+	        ui.item.css("background-color", "rgb(74,89,164)");
+	        ui.item.css("text-align", "center");
+	        ui.item.css("list-style-type", "none");
+  
+	    	document.getElementById("demo").innerHTML = ui.item.context.id;
+	    }
+
+    });
 	    
 	    $(element).delegate(".closeButton", "click", function() {
 	        $(this).parent().remove();
 	    });
 }
+function changeConnect(el) {
+	var thisID = $(el).attr('id');
+	var indexOfEdit = thisID.substring(4).toString(); 
+	document.getElementById("demo").innerHTML = indexOfEdit;
+	var sortNodeID = "#sortable"+indexOfEdit.toString();
+	$( "#draggable li" ).draggable({
+         connectToSortable: sortNodeID,
+         helper: "clone",
+         revert: "invalid"
+    });
+
+    $( sortNodeID ).sortable({
+        revert: true,
+    });
+}
 </script>
 </head>
 <body>
 <div id="header"><h2>CS3213 Assignment3</h2></div>
- <p id="test" style="color: red">Here</p>
+<p id = "demo" style="color: black"></p>
  <div id="storage">
  	<div id="divName"><p>Old Project</p></div>
  	<input type="submit" value="Load">
@@ -233,7 +285,6 @@ function dropOver() {
  
 <div id="editor">
  	<div id="divName">Editor</div>
- 	<!-- "<div id="sortable"></div>" -->
  	<div id="divtest" style="overflow: scroll; height: 300px; width: 350px; float: left; border: dotted" 
  		ondrop="dropIt(event); dropOver();" ondragover="event.preventDefault();">
 	</div>
@@ -244,10 +295,11 @@ function dropOver() {
  	<div id="divName">Setting</div>
  	<form>
     	<ul id="draggable">
-    		<li id="right">Move Right<input type="text" name="right" size="2">steps</li>
-    		<li id="left">Move Left<input type="text" name="left" size="2">steps</li>
-    		<li id="x">Set X:<input type="text" name="x_pos" size="2">  </li>
-    		<li id="y">Set Y:<input type="text" name="y_pos" size="2">  </li>        
+    		<li id="right">Move Right <input type="text" name="right" size="2">steps</li>
+    		<li id="left">Move Left <input type="text" name="left" size="2">steps</li>
+    		<li id="x">Set X <input type="text" name="x_pos" size="2">  </li>
+    		<li id="y">Set Y <input type="text" name="y_pos" size="2">  </li>   
+    		<li id='repeat'>Repeat <input type="text" name="repeat" size="2"> </li>     
 		</ul>
 	</form>
 </div>
