--- a/WebContent/mainPage.html
+++ b/WebContent/mainPage.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
   <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
   <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
+  <script src="bootstrap.min.js"></script>
+
 <style>
 body {
 	background-image: url("background14.jpg");
@@ -33,8 +35,15 @@ div#storage, div#player, div#editor, div#coordEditor, div#source, div.divName {
 	color: white;
 }
 #coordEditor {
-	height: 290px;
-	width: 240px;
+	height: 340px;
+	width: 300px;
+	padding: 5px;
+	float: left;
+}
+#source {
+	height: 340px;
+	width: 300px;
+	padding: 5px;
 	float: left;
 }
 #editor {
@@ -66,12 +75,6 @@ div#storage, div#player, div#editor, div#coordEditor, div#source, div.divName {
 }
 #repeat {
 	background-color: rgb(62,69,127);
-}
-#source {
-	height: 320px;
-	width: 300px;
-	padding: 5px;
-	float: left;
 }
 #divName {
 	border-radius: 10px;
@@ -148,14 +151,14 @@ function dropIt(theEvent) {
 	//get the element
 	var theDraggedElement = document.getElementById(theData);
 	var eleSrc = theDraggedElement.getAttribute("src");
-	var div = document.createElement("div");
-	div.style.cssText = "margin: 5px; height: 100px; width: 100px; float: left";
-	div.id = "div" + countElement.toString();
 	var element = document.createElement("img");
 	element.id = "element" + countElement.toString();
 	element.setAttribute('src', eleSrc);
 	element.setAttribute('height', '100px');
 	element.setAttribute('dragable', 'false');
+	var div = document.createElement("div");
+	div.style.cssText = "margin: 5px; height: 100px; width: 100px; float: left";
+	div.id = "div" + countElement.toString();
 	div.appendChild(element);
 	//add it to the drop element
 	theEvent.target.appendChild(div);
@@ -287,28 +290,14 @@ function changeConnect(el) {
  	<input type="submit" value="Save">
  </div>
  
-<div id="editor">
- 	<div class="divName"><h4>Editor</h4></div>
- 	<div id="divtest" style="overflow: scroll; height: 250px; width: 400px; float: left; border: none; border-radius: 10px; margin: 10px; background-color: rgba(135, 38, 87, 0.3); " 
- 		ondrop="dropIt(event); dropOver();" ondragover="event.preventDefault();">
-	</div>
- 	<input type="submit" value="Play!" onclick="submit()">
-</div>
- 
-<div id="coordEditor">
- 	<div class="divName"><h4>Setting</h4></div>
- 	<form>
-    	<ul id="draggable">
-    		<li id="right">Move Right <input type="text" name="right" size="2">steps</li>
-    		<li id="left">Move Left <input type="text" name="left" size="2">steps</li>
-    		<li id="x">Set X <input type="text" name="x_pos" size="2">  </li>
-    		<li id="y">Set Y <input type="text" name="y_pos" size="2">  </li>   
-    		<li id='repeat'>Repeat <input type="text" name="repeat" size="2"> </li>     
-		</ul>
-	</form>
-</div>
- 
- <div id="source">
+  <ul class="nav nav-tabs" role="tablist" style="width: 300px">
+  <li class="active"><a href="#source" role="tab" data-toggle="tab">Source</a></li>
+  <li><a href="#coordEditor" role="tab" data-toggle="tab">Setting</a></li>
+  </ul>
+
+<!-- Tab panes -->
+  <div class="tab-content" style="width: 300px">
+  	<div class="tab-pane active" id="source">
  	<div class="divName"><h4>Float</h4></div>
  	<div class="floatArea" ondragover="event.preventDefault();">
  			<button onclick="changeFloatLeft()"><img src="arrow_left.gif" height="15px"></button>
@@ -322,6 +311,29 @@ function changeConnect(el) {
  			<img id="curCharacter" src="char1.jpeg" height="100px" draggable="true" ondragstart="dragIt(event);"/>
  		<button onclick="changeCharacterRight()"><img src="arrow_right.gif" height="15px"></button>
  	</div>
-</div>
+    </div>
+
+    <div class="tab-pane" id="coordEditor">
+ 	<div class="divName"><h4>Setting</h4></div>
+ 	<form>
+    	<ul id="draggable">
+    		<li id="right">Move Right <input type="text" name="right" size="2">steps</li>
+    		<li id="left">Move Left <input type="text" name="left" size="2">steps</li>
+    		<li id="x">Set X <input type="text" name="x_pos" size="2">  </li>
+    		<li id="y">Set Y <input type="text" name="y_pos" size="2">  </li>   
+    		<li id='repeat'>Repeat <input type="text" name="repeat" size="2"> </li>     
+		</ul>
+	</form>
+	</div>
+  </div>
+
+  <div id="editor">
+ 	<div class="divName"><h4>Editor</h4></div>
+ 	<div id="divtest" style="overflow: scroll; height: 250px; width: 420px; float: left; border: none; border-radius: 10px; margin: 10px; background-color: rgba(135, 38, 87, 0.3); " 
+ 		ondrop="dropIt(event); dropOver();" ondragover="event.preventDefault();">
+ 		
+	</div>
+ 	<input type="submit" value="Play!" onclick="submit()">
+  </div>
 </body>
 </html>
